inou/prp/tests/errors/typecheck_type_change.prp
/*
:name: typecheck_type_change
:type: error
:error: type cannot change
*/

// A variable's type cannot change after it is established: `d` is an integer,
// so reassigning a tuple is an error. Use a new variable: `mut e = d ++ 60`.

mut d = 2
d = d ++ 60
